# rustyShare

./: .gitignore  Cargo.toml  INSTALL_GUIDE.md  README.md  ROADMAP.md
html/: error.html  home.html  master.html  media.html
scripts/: README.md  installer.sh  uninstaller.sh
src/: cache.rs  main.rs  rustyStrem.lnk
src/fileManager/: files.rs  scanner.rs  watch.rs
src/file_manager/: file_tree.rs  file_utils.rs  files.rs  mod.rs  scanner.rs  tree_watcher.rs  watch.rs
src/media/: file_type.rs  files.rs  mod.rs  scanner.rs  watch.rs
src/server/: auth.rs  error.rs  mod.rs  routes.rs  startup.rs  stream.rs  streaming.rs
src/server/file_operations/: mod.rs  streaming.rs
src/server/routing/: README.md  mod.rs  router.rs
src/server/routing/handlers/: auth.rs  file_operations.rs  health.rs  mod.rs  static_content.rs
src/utils/: config.rs
static/html/: error.html  error.html:Zone.Identifier  home.html  home.html:Zone.Identifier  master.html  master.html:Zone.Identifier
static/js/: api.js  dom.js  home.js  main.js  master.js
