[package]
name = "rustyShare"
version = "0.1.0"
edition = "2021"
authors = ["Guy Yagil"]
description = "A lightweight sharing/streaming server for local networks"

[dependencies]
# Web Server
axum = { version = "0.8.4", features = ["macros"] }

tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "limit"] }

# Media Handling
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7.15"
notify = "8.0.0"
headers = "0.4.0"
axum-extra = { version = "0.10", features = ["typed-header" , "multipart","cookie"] }
tower-cookies = "0.11" 
cookie = "0.18.1"
bytes = "1.10.1"
futures-util = "0.3.31"
futures-core = "0.3.31"
